<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".FunFactsActivity">

    <item
        android:id="@+id/action_suggest"
        android:orderInCategory="100"
        android:title="@string/action_suggest"
        app:showAsAction="never"/>



    <item
        android:id="@+id/action_rate"
        android:orderInCategory="100"
        android:title="@string/action_rate"
        app:showAsAction="never"/>


    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never"/>
</menu>
