<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ff424242"
                android:paddingTop="0dp"
                tools:context=".FunFactsActivity"
                android:id="@+id/layout_application"
    >

    <LinearLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_toolbar"
        android:background="#ff424242"
        android:layout_above="@+id/suggestButton">



        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerHorizontal="true"
            android:src="@drawable/rostinhos01"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_marginLeft="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/suggestion_email"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:hint="@string/email_hint"
            app:met_floatingLabelTextColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_textColorHint="@android:color/white"
            app:met_textColor="@android:color/white"
            app:met_baseColor="#FFFFD8F3"
            app:met_primaryColor="@android:color/white"
            android:gravity="center"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_marginLeft="50dp"
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/suggestion_email"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/suggestion_txt"
            android:hint="@string/suggestion_hint"
            android:textColor="@android:color/white"
            app:met_floatingLabelTextColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_textColorHint="@android:color/white"
            app:met_textColor="@android:color/white"
            app:met_baseColor="#FFFFD8F3"
            app:met_primaryColor="@android:color/white"
            app:met_maxCharacters="150"
            android:layout_centerHorizontal="true"
            android:maxLength="150"
            android:gravity="center"/>


    </RelativeLayout>

    <Button
        android:id="@+id/suggestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:background="#b4c2185b"
        android:elevation="0dp"
        android:text="@string/suggest_button"
        android:textColor="#ffffffff"/>

</RelativeLayout>
